--- a/expense/index.html
+++ b/expense/index.html
@@ -79,7 +79,7 @@
       <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
       <h2>Expenses:</h2>
       <ul class="list-group list-group-flush" id="expense"></ul><br>
-
+      <div id="pagination"></div>
       <ul class="list-group list-group-flush" id="leaderboard"></ul><br>
       <button onclick="download()" id="downloadexpense" class="btn btn-outline-dark">Download Report</button>
 
